--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,6 +21,11 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    # Lint 규칙 경고 끔
+    prefer_const_constructors: false
+    avoid_print: false
+    prefer_typing_uninitialized_variables: false
+    prefer_const_constructors_in_immutables: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
