--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^3.13.0
   google_sign_in: ^6.3.0
   firebase_ui_oauth_google: ^1.4.1
+  cloud_firestore: ^5.6.6
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/
+    - assets/images/Google__G__logo.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
