--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   intl: ^0.19.0 # 또는 최신 버전 (버전 확인 필요) # <--- 이 줄 추가
+  google_maps_flutter: ^2.5.0 # Google Maps 패키지 (최신 버전 확인)
   sliding_up_panel: ^2.0.0+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -64,6 +66,8 @@ flutter:
     - assets/images/
     - assets/flags/ # 국기 이미지 폴더
     - assets/images/Google__G__logo.png
+    - assets/images/egg.png
+    - assets/images/spring.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
