--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_sign_in: ^6.3.0
   firebase_ui_oauth_google: ^1.4.1
   cloud_firestore: ^5.6.6
+  timezone: ^0.10.1
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.5
 
 dev_dependencies:
   flutter_test:
