--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   timezone: ^0.10.1
   image_picker: ^1.1.2
   firebase_storage: ^12.4.5
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
