--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,31 +43,16 @@ dependencies:
   google_sign_in: ^6.3.0
   firebase_ui_oauth_google: ^1.4.1
   cloud_firestore: ^5.6.6
-<<<<<<< HEAD
+  http: ^1.4.0
+  http_parser: ^4.0.2 # MediaType 클래스를 위해 추가
+  path: ^1.8.3 # 파일 경로 및 확장자 처리를 위해 추가
+
   timezone: ^0.10.1
   image_picker: ^1.1.2
   firebase_storage: ^12.4.5
-=======
-#<<<<<<< Updated upstream
-  timezone: ^0.10.1
-  image_picker: ^1.1.2
-  firebase_storage: ^12.4.5
-#=======
-#<<<<<<< HEAD
-#<<<<<<< HEAD
-#  image_picker: ^1.0.0
-#=======
-#  timezone: ^0.10.1
-#  image_picker: ^1.1.2
-#  firebase_storage: ^12.4.5
-#>>>>>>> 4714ebbc4588898a7370548540174a1e923bfa8a
-#=======
-#  timezone: ^0.10.1
-#  image_picker: ^1.1.2
-#  firebase_storage: ^12.4.5
-#>>>>>>> 4714ebbc4588898a7370548540174a1e923bfa8a
-#>>>>>>> Stashed changes
->>>>>>> 59003e70abe2034a12806d48b4710432e3554651
+  chaquopy: ^0.0.20
+  google_generative_ai: ^0.4.7
+
 
 dev_dependencies:
   flutter_test:
