--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   timezone: ^0.10.1
   image_picker: ^1.1.2
   firebase_storage: ^12.4.5
-  chaquopy: ^0.0.20
+  #chaquopy: ^0.0.20
   google_generative_ai: ^0.4.7
 
 
