meet up 게시글, spot 게시글, 프로필 구성 변경

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
   assets:
     - assets/images/
     - assets/flags/
+    - assets/flags/
+    - assets/flags/
     - assets/images/Google__G__logo.png
     - assets/images/egg1.png
     - assets/images/spring.jpg
