--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,20 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- 여기에 인터넷 권한을 추가했습니다 -->
     <uses-permission android:name="android.permission.INTERNET"/>
-    <!-- 위치 정보 사용 시 추가 권한 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:label="naviya"
+        android:label="Hatch"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
-        <!-- 여기에 Google Maps API 키를 추가합니다. -->
         <meta-data android:name="com.google.android.geo.API_KEY"
-        android:value=""/>
-
+                   android:value=""/> // Add your API key
 
         <activity
             android:name=".MainActivity"
