--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@mipmap/ic_launcher">
 
         <meta-data android:name="com.google.android.geo.API_KEY"
-                   android:value=""/> // Add your API key
+                   android:value="AIzaSyAYs4Eybp4wveIqW6jH0kVhzyDp8VibPNU"/> // Add your API key
 
         <activity
             android:name=".MainActivity"
